# mcpvenom

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml  quickstart.sh  scan
.cursor/rules/: mcpnuke-checks.mdc  mcpnuke-development.mdc  mcpnuke-tests.mdc
docs/specs/: 2026-04-26-by-lane-reporting.md
mcpnuke/: __init__.py  __main__.py  cli.py  diff.py  scanner.py
mcpnuke/checks/: __init__.py  _lane_helpers.py  actuator_probe.py  base.py  behavioral.py  chaining.py  config_tampering.py  credential_in_schema.py  execution.py  exfil_flow.py  injection.py  jwt_validation.py  llm_analysis.py  permissions.py  prompt_leakage.py  rate_limit.py  response_credentials.py  ssrf_probe.py  supply_chain.py  teleport_labs.py  theft.py  tool_probes.py  transport.py  webhook_persistence.py
mcpnuke/core/: __init__.py  auth.py  constants.py  enumerator.py  llm.py  models.py  session.py
mcpnuke/data/: public_targets.txt  tool_names.txt
mcpnuke/k8s/: Dockerfile  __init__.py  (+3 more)
mcpvenom/: __init__.py  __main__.py  cli.py  diff.py  scanner.py
tests/: __init__.py  conftest.py  test_actuator_probe.py  test_attack_chains_json.py  test_auth_flow_support.py  test_checks_integration.py  test_cli.py  test_config_tampering.py  test_credential_in_schema.py  test_diff.py  test_dvmcp.py  test_error_leakage_json.py  test_exfil_flow.py  test_indirect_multi_param.py  test_jwt_validation.py  test_k8s.py  test_k8s_external.py  test_llm_analysis_phase2.py  test_pagination.py  test_patterns.py  test_prompt_leakage.py  test_public_targets.py  test_rate_limit.py  test_response_credentials.py  test_round1_fixes.py  test_session_id.py  test_ssrf_probe.py  test_state_mutation_v2.py  test_supply_chain.py  test_teleport_labs.py  test_transport_filter.py  test_webhook_persistence.py
walkthrough/: README.md  demo.sh  demo_ai.sh
(+68 files in other folders)
