[project]
name = "mcpvenom"
version = "5.0.0"
description = "MCP red teaming & security scanner — enumerate, probe, and exploit Model Context Protocol servers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "babywyrm" },
]
keywords = ["mcp", "security", "red-team", "pentest", "scanner", "model-context-protocol", "ai-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
k8s = [
    "kubernetes>=31.0",
]

[project.scripts]
mcpvenom = "mcpvenom.__main__:main"

[project.urls]
Repository = "https://github.com/babywyrm/mcpvenom"
Issues = "https://github.com/babywyrm/mcpvenom/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcpvenom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --ignore=tests/test_targets"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
